--- a/frontend/src/app/modules/books/components/books-list/books-list.component.html
+++ b/frontend/src/app/modules/books/components/books-list/books-list.component.html
@@ -1,1 +1,5 @@
-<ng2-smart-table [settings]="tableSettings" [source]="source"></ng2-smart-table>
+<div class="card">
+    <div class="card-body">
+        <ng2-smart-table [settings]="tableSettings" [source]="source"></ng2-smart-table>
+    </div>
+</div>
