--- a/frontend/src/app/modules/books/components/books-list/books-list.component.html
+++ b/frontend/src/app/modules/books/components/books-list/books-list.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card-body">
-        <ng2-smart-table [settings]="tableSettings" [source]="source" (custom)="edit($event)"></ng2-smart-table>
+        <ng2-smart-table [settings]="tableSettings" [source]="source" (custom)="onAction($event)"></ng2-smart-table>
     </div>
 </div>
