--- a/frontend/src/app/modules/books/components/books-list/books-list.component.scss
+++ b/frontend/src/app/modules/books/components/books-list/books-list.component.scss
@@ -1,8 +1,36 @@
+.card {
+    width: 90%;
+    margin: 0 auto;
+}
+
 ::ng-deep ng2-smart-table {
     text-align: center;
 }
 
-.card {
-    width: 90%;
-    margin: 0 auto;
+::ng-deep ng2-smart-table table {
+    border-width: 2px;
+
+    display: table;
+    border-spacing: 2px;
+    border-color: grey;
+
+    overflow: auto;
+    word-break: normal;
+    word-break: keep-all;
+}
+
+::ng-deep ng2-smart-table table > tbody > tr > td {
+    box-sizing: border-box;
+    border: 1px solid grey;
+    padding: 0.5rem 1rem;
+}
+
+::ng-deep ng2-smart-table thead > tr > th {
+    border: 1px solid grey;
+    font-size: 0.75rem;
+    font-weight: bold;
+}
+
+::ng-deep ng2-smart-table {
+    font-size: 16px;
 }
